--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 body{
-    background-color: var(--cor-fundo);
+    background-image: url(ben10wallpaper08\ \(1\).jpg);
     color: var(--cor-texto);
     display: flex;
     justify-content: center;
