--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 
 body{
     background-image: url(ben10wallpaper08\ \(1\).jpg);
+    background-size: 900px;
     background-repeat: no-repeat;
     color: var(--cor-texto);
     display: flex;
