--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ h1{
     --cor-fundo: #01080E;
     --cor-principal: rgb(1, 83, 26) ;
     --cor-secundaria: #5d9217cc;
-    --cor-destaque: #1f3f0c;
+    --cor-destaque: #9cd17d;
     --cor-texto: #2d5224;
 }
 
