--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ h1{
     --cor-principal: rgb(1, 83, 26) ;
     --cor-secundaria: #5d9217cc;
     --cor-destaque: #9cd17d;
-    --cor-texto: #2d5224;
+    --cor-texto: #25b900;
 }
 
 button{
